<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout style="@style/BackgroundPrimary">

        <LinearLayout
            android:id="@+id/layout_activity_change_user_information_informatinos"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            app:layout_constraintBottom_toTopOf="@id/layout_activity_change_user_information_buttons"
            app:layout_constraintEnd_toEndOf="@id/guideline_activity_change_user_information_vertical_2"
            app:layout_constraintStart_toStartOf="@id/guideline_activity_change_user_information_vertical_1"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                style="@style/TextViewUserInformationPageTitle"
                android:layout_marginTop="24dp"
                android:layout_marginBottom="40dp"
                android:text="@string/activity_change_user_information_change_information" />

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/image_activity_change_user_information_user_profile"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:src="@drawable/image_temp" />

            <TextView
                style="@style/TextViewUserInformationSubTitle"
                android:layout_marginTop="12dp"
                android:layout_marginBottom="48dp"
                android:text="@string/activity_change_user_information_change_profile" />

            <EditText
                android:id="@+id/et_activity_change_user_information_email"
                style="@style/EditTextPrimary"
                android:layout_width="match_parent"
                android:layout_marginBottom="12dp"
                android:hint="@string/email"
                android:importantForAutofill="no"
                android:inputType="textEmailAddress" />

            <EditText
                android:id="@+id/et_activity_change_user_information_id"
                style="@style/EditTextPrimary"
                android:layout_width="match_parent"
                android:hint="@string/id"
                android:importantForAutofill="no"
                android:inputType="text" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/layout_activity_change_user_information_buttons"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@id/guideline_activity_change_user_information_vertical_2"
            app:layout_constraintStart_toStartOf="@id/guideline_activity_change_user_information_vertical_1"
            app:layout_constraintTop_toBottomOf="@id/layout_activity_change_user_information_informatinos">

            <TextView
                style="@style/TextViewAuthRegisterHint"
                android:layout_width="match_parent"
                android:layout_marginBottom="12dp"
                android:text="@string/activity_change_user_information_change_password" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="32dp"
                android:minHeight="48dp">

                <TextView
                    android:id="@+id/btn_activity_change_user_information_cancel"
                    style="@style/TextViewPrimary"
                    android:layout_marginEnd="8dp"
                    android:text="@string/do_cancel"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@id/btn_activity_change_user_information_change"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/btn_activity_change_user_information_change"
                    style="@style/ButtonPrimary"
                    android:layout_marginStart="8dp"
                    android:text="@string/do_change"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@id/btn_activity_change_user_information_cancel"
                    app:layout_constraintTop_toTopOf="parent" />
            </androidx.constraintlayout.widget.ConstraintLayout>

        </LinearLayout>

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline_activity_change_user_information_vertical_1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.05" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline_activity_change_user_information_vertical_2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.95" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>