<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout style="@style/BackgroundBottomSheetDialogPrimary">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@id/guideline_dialog_calendar_vertical_2"
            app:layout_constraintStart_toStartOf="@id/guideline_dialog_calendar_vertical_1"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                style="@style/TextViewTitlePrimary"
                android:text="@string/dialog_enter_birthday_please_enter_birthday" />

            <TextView
                style="@style/TextViewDialogContentPrimaryAlignStart"
                android:layout_width="match_parent"
                android:gravity="start"
                android:text="@string/dialog_enter_birthday_description" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="32dp"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <TextView
                    style="@style/TextViewDialogHintPrimary"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:text="@string/dialog_enter_birthday_please_select_birthday" />

                <androidx.cardview.widget.CardView
                    android:id="@+id/btn_dialog_enter_birthday_birthday"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/color_surface_secondary"
                    app:cardCornerRadius="8dp"
                    app:cardElevation="0dp">

                    <TextView
                        android:id="@+id/tv_dialog_enter_birthday_selected_birthday"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginHorizontal="12dp"
                        android:layout_marginVertical="4dp"
                        tools:text="2006-05-08" />
                </androidx.cardview.widget.CardView>
            </LinearLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:minHeight="48dp">

                <TextView
                    android:id="@+id/btn_dialog_enter_birthday_cancel"
                    style="@style/TextViewCancelButtonPrimary"
                    android:layout_marginEnd="8dp"
                    android:minHeight="48dp"
                    android:text="@string/do_cancel"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@id/btn_dialog_enter_birthday_enter"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/btn_dialog_enter_birthday_enter"
                    style="@style/ButtonPrimary"
                    android:layout_marginStart="8dp"
                    android:minHeight="48dp"
                    android:text="@string/do_enter"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@id/btn_dialog_enter_birthday_cancel"
                    app:layout_constraintTop_toTopOf="parent" />
            </androidx.constraintlayout.widget.ConstraintLayout>
        </LinearLayout>

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline_dialog_calendar_vertical_1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.1" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline_dialog_calendar_vertical_2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.9" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>